--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ pytest = "^6.2.4"
 isort = "^5.9.2"
 tox = "^3.24.0"
 google-cloud-storage = "^1.42.3"
+freezegun = "^1.1.0"
+requests-mock = "^1.9.3"
 
 [tool.poetry.dev-dependencies]
 
