--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "--max-line-length",
         "150"
     ],
+    "python.linting.mypyEnabled": true,
     "python.formatting.provider": "black",
     "editor.formatOnType": true,
     "editor.codeActionsOnSave": {
