Update: mypyによる型検査実施

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ google-cloud-storage = "^1.42.3"
 freezegun = "^1.1.0"
 requests-mock = "^1.9.3"
 google-cloud-secret-manager = "^2.8.0"
+pandas-stubs = "^1.2.0"
 
 [tool.poetry.dev-dependencies]
 
